Testando herança e polimorfismo. Foi adicionado metodos a classe conta e corrigido a classe conta corrente e poupança em seguida adicionado a classe de teste para manipulação do atributo saldo.

--- a/org/treinamento/.gitignore
+++ b/org/treinamento/.gitignore
@@ -16,3 +16,12 @@
 /TestaAcessoContaPrivate02.class
 /ContaPrivateSetter.class
 /IdadeAnoQueVem.class
+/Funcionario.class
+/ContaPrivate$ContaCorrente.class
+/ContaPrivate$ContaPoupança.class
+/TestaContas.class
+/ContaCorrente.class
+/ContaPoupanca.class
+/ContaPoupança.class
+/ContaPrivate$ContaPoupanca.class
+/ContaPrivate$TestaContas.class
