Adicionado a classe abstrata

--- a/org/treinamento/.gitignore
+++ b/org/treinamento/.gitignore
@@ -25,3 +25,5 @@
 /ContaPoupança.class
 /ContaPrivate$ContaPoupanca.class
 /ContaPrivate$TestaContas.class
+/ControleDeBonificacoes.class
+/Gerente.class
